examples/good/09-global-variables.tx
fun test(): Int {
  return 1;
}

var a: Int = test();
var b: Int = 2;

fun main(): Void {
  printInt(a);
  printInt(b);
  
  return;
}