examples/bad/04-expression.tx
fun main(): Void {
    var x: Int = 4;
    var y: String = "Hello";
    var z: Int = x + y;
    return;
}